# CompetitiveProgramming

./: CMakeLists.txt  LICENSE  Zeckendorf.cpp  a.out  fibo_dp.cpp  fibo_rec.cpp  new.cpp  neww.c  oop.cpp  prac.c  speed.cpp  stl.cpp  template.cpp  test-learn  test-learn.cpp  test.cpp  vim
Algo-DS/: CLL.cpp  DLL.cpp  SLL.cpp  a.out  graph.cpp  queue.cpp  stack.cpp
Atcoder/189/: ASlot.cpp  BAlcoholic.cpp  CMandarinOrange.cpp  a.out
Atcoder/196/: A.cpp  B.cpp  C.cpp  a.out
Atcoder/DP/: .C.cpp.swp  .frog1.cpp.swp  A.cpp  B.cpp  a.out
Atcoder/practice/: a.out  digitalGraffiti.cpp  powerSocket.cpp  qualificationSimulator.cpp  rally.cpp  removeIt.cpp  vanishingPitch.cpp
Atcoder/practice/ABC200/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  a.out
Atcoder/practice/ABC202/: .C.cpp.swp  A.cpp  B.cpp  C.cpp  a.out
CC/: .wipl.cpp.swp  COINS.cpp  a.out  billrd.cpp  decodeit.cpp  divThree.cpp  evenpsum.cpp  fairelct.cpp  lue.cpp  marbles.cpp  orand.cpp  posprefs.cpp  vaccine1.cpp  vaccine2.cpp
CC/aprLong/: EMP.cpp  a.out  boolgame.cpp  chaosemp.cpp  kavgmat.cpp  mexstr.cpp  mexstr2.cpp  sdice.cpp  treeperm.cpp
CC/febLong/: .sumxor2.cpp.swp  a.out  atwnt.cpp  checks.cpp  checks2.cpp  frogs.cpp  hdivisr.cpp  maxfun.cpp  meet.cpp  mulgame.cpp  prigame.cpp  subsets.cpp  sumxor.cpp  sumxor2.cpp  sushsumxor2.cpp  teamname.cpp  teamname.py  test1.cpp
CC/janCookoff/: a.out  manysums.cpp  passwd.cpp  ptuples.cpp
CC/marLong/: a.out  colglf4.cpp  consadd.cpp  densegrp.cpp  irstxor.cpp  maxtopo.cpp  output.txt  paparazi.cpp  spacearr.cpp
CC/marLong/wireless-electricity/: a.out  wirelesselectricity.cpp
CC/mayLong/: a.out  cl2.cpp  iss.cpp  kkling.cpp  modeq.cpp  tctctoe.cpp  thouses.cpp  vpath.cpp  xorequal.cpp
CC/practice/: a.out  cnote.cpp  lecandy.cpp  salary.cpp
CF/: .cleaning.cpp.swp  579A.cpp  a.out  bit.cpp  caps-lock.cpp  diffDiv.cpp  dragons.cpp  evenArray.cpp  last-minute-enhancement.cpp  longWords.cpp  lucky-division.cpp  newyearcandles.cpp  newyeartrans.cpp  rising-bacteria.cpp  special_permutation.cpp  taxi.cpp  template.cpp  watermelon.cpp  xringroad.cpp
CF/1850-Div4/: 1850A.cpp  1850B.cpp  1850C.cpp  1850D.cpp  a.out
CF/696/: arrayDestruction.cpp  puzzleFromTheFuture.cpp
CF/697/: a.out  ballInBerland.cpp  cleaningThePhone.cpp  nyn.cpp  oddDivisor.cpp
CF/697div3/: ballInBerland.cpp  nyn.cpp  oddDivisor.cpp
CF/698/: a.out  nezzarColorfulballs.cpp
CF/704/: .B.cpp.swo  .B.cpp.swp  A.cpp  B.cpp  a.out
CF/710/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  a.out
CF/717/: A.cpp  B.cpp  a.out
CF/894-Div3/: A.cpp  B.cpp  a.out  first.cpp  second.cpp  subArraySum.cpp  t.c
CF/DP-practice/: a.out  hitTheLottery.cpp
CF/EDU/binarySearch/: 1A.cpp  1B.cpp  1C.cpp  2A.cpp
CF/EDU/graph/: representation.cpp
CF/practice/: .twins.cpp.swp  158A.cpp  231A.cpp  50A.cpp  579A.cpp  BstringLCM.cpp  IwannaBeTheGuy.cpp  a.out  antiqueItems.cpp  antonLetters.cpp  arrivalOfGeneral.cpp  beautiful-matrix.cpp  berSUBall.cpp  caps-lock.cpp  chat-room.cpp  cheapTravel.cpp  dreamoonStairs.cpp  evenOdds.cpp  fedorGame.cpp  foxSnake.cpp  games.cpp  lucky-division.cpp  newyeartrans.cpp  next-round.cpp  olesya-rodion.cpp  pashmakGarden.cpp  pstrings.cpp  puzzles.cpp  queueSchool.cpp  randomTeams.cpp  road-to-zero.cpp  segmentsOwnPoints.cpp  sortTheArray.cpp  string-task.cpp  teamOlympiad.cpp  teamf.cpp  theatre-square.cpp  unique_bid_auction.cpp  whiteSheet.cpp  worms.cpp  (+1 more)
CF/practice/Div2A/: AreplacingElements.cpp  IwannaBeTheGuy.cpp  a.out  antonLetters.cpp  applemanEasyTask.cpp  bearRaspberry.cpp  beautifulYear.cpp  borze.cpp  bovine-dilemma.cpp  cakeminator.cpp  chessCheater.cpp  choosingTeams.cpp  domino.cpp  dscj.cpp  dubstep.cpp  expression.cpp  favourite-sequence.cpp  flippingGame.cpp  gameWithSticks.cpp  gregWorkout.cpp  helpfulMath.cpp  ilyaBank.cpp  iqTest.cpp  laptops.cpp  last-minute-enhancement.cpp  longWords.cpp  lunchRush.cpp  matrixGame.cpp  minimumDifficulty.cpp  newYearHurry.cpp  pashmakGarden.cpp  playingDice.cpp  shortSubstrings.cpp  softDrinking.cpp  sortTheArray.cpp  twins.cpp  vanyaAndLanterns.cpp  xxxxx.cpp  young-physicist.cpp
CSES/: .twoKnights.cpp.swp  1-weird-algo.cpp  2-missing-number.cpp  4-increasing-array.cpp  5-permutations.cpp  a.out  diceCombination.cpp  twoKnights.cpp
CSES/DP/: a.out  minimizingCoins.cpp
CSES/introProb/: 2-missing-number.cpp  3-repetitions.cpp  a.out  bitStrings.cpp  numberSpiral.cpp  trailingZeros.cpp  twoSets.cpp
DSA/Compression Algorithms/: Huffman Coding.cpp
DSA/Data Structures/: Binary Indexed Tree.cpp  Binary Search Tree.cpp  Binomial Heap.cpp  Bit Queue.cpp  Circular Doubly-Linked List.cpp  Disjoint Set Union.cpp
DSA/Recursion, Backtracking etc./: K-Combinations.cpp  Permutations.cpp  Power Set.cpp
DSA/Searching Algorithms/: Binary Search.cpp  Quickselect.cpp  Ternary Search.cpp
DSA/Sorting Algorithms/: Merge Sort.cpp
DSA/maths/: GCD.cpp  LCM.cpp  a.out  checkPalindromeNumber.cpp  checkPrime.cpp  countDigits.cpp  factorial.cpp  trailingZerosFact.cpp
DSA/recursion/: Josephus.cpp  a.out  subset.cpp  sumOfDigits.cpp  towerOfHanoi.cpp
EDU/binarySearch/: 1D.cpp  a.out
EDU/graph/: a.out  connectedComponents.cpp
EDU/segmentTree/: a.out  segHalim.cpp  segTreeMinCF.C  segTreeMinCountCF.C  segTreeSumCF.C
Files/: a.out  ar-Zeckendorf.cpp  ar-fibo-rec.cpp  ar-matexp-fibo.cpp  fibo_dp.cpp  gen.cpp  generatorMAKEDIV.cpp  revise_cpp.cpp  solMAKEDIV.cpp
Files/DP-NT-contest/: DP-NT.cpp  Out00.out  Out01.out  Out02.out  Out03.out  Out04.out  Out05.out  Out06.out  Out07.out  Out08.out  Out09.out  Test00.in  Test01.in  Test02.in  Test03.in  Test04.in  Test05.in  Test06.in  Test07.in  Test08.in  Test09.in  a.out  generator.cpp
Files/GRUNDY-contest/: GRUNDY_.cpp  Out00.out  Out01.out  Out02.out  Out03.out  Test00.in  Test01.in  Test02.in  Test03.in  a.out  generatorGRUNDY.cpp
test/cvl/: Out01.out  a.out  generator.cpp  sol.cpp
test/invrsion/: Out01.out  Test01.in  Test02.in  a.out  generator.cpp  sol.cpp
test/traveljo/: Out01.out  Out02.out  Test01.in  Test02.in  a.out  generator.cpp  sol.cpp
(+14 files in other folders)
